src/components/CommentForm/CommentForm.scss
@use "@sass/mixins" as *;

.comment-form {
  position: relative;

  textarea {
    @include transition(background-color);
    @include text-input;

    display: block;
    width: 100%;
    height: 89px;
    padding: 10px;
    padding-bottom: 50px;
    resize: none;
  }

  &__controls {
    display: flex;
    position: absolute;
    right: 10px;
    bottom: 10px;

    & > :not(:last-child) {
      margin-right: 6px;
    }
  }
}

